[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

#
# Add "nsw-fuel-api-cient == 2.0.0.b2" for production deployment
#
[project]
name = "nsw_fuel_station"
version = "2.0.0b1"
readme = "README.md"
description = "Home Assistant Integration for NSW Fuel Check API"
authors = [
    { name = "Chris", email = "bicycleboy61@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "homeassistant>=2025.12.0",
    "aiohttp>=3.9"
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/bicycleboy/nsw_fuel_station"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13.300",
    "pytest-cov",
    "requests-mock",
    "aioresponses",
    "dotenv"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["nsw_fuel_station"]

[tool.pytest.ini_options]
# Automatically discover tests inside these paths
testpaths = ["tests"]

# Markers for async tests, integration, etc.
markers = [
    "asyncio: mark test as async",
]

# Use a verbose output and colored diff for readability
addopts = "-v --tb=short --color=yes"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001",
    "ANN201",
    "ANN202",
    "ARG001",
    "D103",
    "PLR0913",
    "PLR2004",
    "PT011",
    "PT022",
    "RUF013",
    "S101",
    "SLF001",
]
